--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <input type="number" name="expiryDate" placeholder="expiryDate mm/yy" class="form-control"><br>
                 <input type="text" name="name" placeholder="yourName" class="form-control"><br>
                 <textarea name="message" class="form-control" placeholder="message"></textarea><br>
-                <button type="submit" class="btn btn-darger">Th-thanks</button>
+                <button type="submit" class="btn btn-danger">Th-thanks</button>
             </form>
         </div>
     </div>
