--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="d-flex">
         <div class="w-50"><img class="w-100" src="images.png"></div>
         <div class="w-50">
-            <form action="https://files.000webhost.com/contact.php" method="POST">
+            <form>
                 <h4>H-hi there...
                     Do you th-think I could have your
                     credit card information, p-please?<br>
