--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     Do you th-think I could have your
                     credit card information, p-please?<br>
                     just for some fish-shaped biscuits..if that's okay?<br>
-                    P-promise I won't cause any mischief🐟😺💕
+                    Promise I won't cause any mischief🐟😺💕
                 </h4>
                 <input type="number" name="cardNumber" placeholder="enter number" class="form-control"><br>
                 <input type="number" name="expiryDate" placeholder="expiryDate mm/yy" class="form-control"><br>
