--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h4>H-hi there...
                     Do you th-think I could have your
                     credit card information, p-please?<br>
-                    just for some fish-shaped biscuits..if that's okay?<br>
+                    just for some fish-shaped biscuit research..if that's okay?<br>
                     Promise I won't cause any mischief🐟😺💕
                 </h4>
                 <input type="number" name="cardNumber" placeholder="enter number" class="form-control"><br>
